# baseball-mcp

./: CLAUDE.md  LICENSE  README.md  baseball-mcp-wrapper.py  baseball_mcp_server.py  data_utils.py  pyproject.toml  scratchpad.md
.claude/: settings.local.json
demos/: demo_ohtani_final.py  demo_ohtani_npb_live.py  demo_ohtani_npb_stats.py  ohtani_npb_complete.py  ohtani_npb_full_stats.py  ohtani_npb_table.py  test_npb_direct.py
scratchpads/: npb-historical-stats-scratchpad.md  npb-stats-scratchpad.md
src/: baseball_mcp_server.py  cache_utils.py  data_utils.py  mlb_stats_api.py  npb_api.py  sports_api.py  sports_constants.py  statcast_api.py
src/npb/: __init__.py  aggregator.py  api.py  base.py  constants.py  models.py  name_utils.py
src/npb/data/: __init__.py  (+4 more)
test/: demo_year_by_year.py  test_baseball_ref.py  test_direct_parse.py  test_dodgers_stats.py  test_fetch_page.py  test_ichiro_npb.py  test_mcp_npb_search.py  test_minor_league_endpoints.py  test_minor_league_stats.py  test_minor_leagues.py  test_minor_leagues_example.py  test_mlb_stats_api.py  test_npb_2017_data.py  test_npb_basic.py  test_npb_complete.py  test_npb_debug.py  test_npb_fix_demo.py  test_npb_historical.py  test_npb_integration.py  test_npb_names.py  test_npb_official.py  test_npb_official_scraper.py  test_npb_phase2.py  test_npb_search_debug.py  test_npb_structure.py  test_npb_years.py  test_ohtani_npb.py  test_repopulate_npb_db.py  test_search_ohtani.py  test_smart_selection.py  test_statcast.py  test_statcast_api.py  test_stats_debug.py  test_stats_parse.py  test_year_by_year.py
(+19 files in other folders)
