[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baseball-mcp"
version = "0.0.9"
description = "MCP server for MLB baseball statistics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "mcp[cli]>=1.9.4", "pybaseball>=2.2.7", "beautifulsoup4>=4.12.0"]

[project.scripts]
baseball-mcp = "baseball_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
only-include = ["src"]

[tool.hatch.build.sources]
"src" = ""
